--- a/components/style.css
+++ b/components/style.css
@@ -1,513 +1,641 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap");
 
-:root 
-{
-    --color-primary: #7380ec;
-    --color-danger: #ff7782;
-    --color-success: #41f1b6;
-    --color-warning: #ffbb55;
-    --color-white: #fff;
-    --color-info-dark: #7d8da1;
-    --color-info-light: #dce1eb;
-    --color-dark: #363949;
-    --color-light: rgba(132, 139, 200, 0.18);
-    --color-primary-variant: #111e88;
-    --color-dark-variant: #677483;
-    --color-background: #f6f6f9;
-    --dark-red: #8b0000;
-    
-    --card-border-radius: 2rem;
-    --border-radius-1: 0.4rem;
-    --border-radius-2: 0.8rem;
-    --border-radius-3: 1.2rem;
+:root {
+  --color-primary: #7380ec;
+  --color-danger: #ff7782;
+  --color-success: #41f1b6;
+  --color-warning: #ffbb55;
+  --color-white: #fff;
+  --color-info-dark: #7d8da1;
+  --color-info-light: #dce1eb;
+  --color-dark: #363949;
+  --color-light: rgba(132, 139, 200, 0.18);
+  --color-primary-variant: #111e88;
+  --color-dark-variant: #677483;
+  --color-background: #f6f6f9;
+  --dark-red: #8b0000;
 
-    --card-padding: 1.8rem;
-    --padding: 1.2rem;
+  --card-border-radius: 2rem;
+  --border-radius-1: 0.4rem;
+  --border-radius-2: 0.8rem;
+  --border-radius-3: 1.2rem;
 
-    --box-shadow: 0 2rem 3rem var(var(--color-light));
+  --card-padding: 1.8rem;
+  --padding: 1.2rem;
+
+  --box-shadow: 0 2rem 3rem var(var(--color-light));
 }
 
 .dark-theme-variables {
-    --dark-red: #ff7782;
-    --color-background: #181a1e;
-    --color-white: #202528;
-    --color-dark: #edeffd;
-    --color-dark-variant: #a3bdcc;
-    --color-light: rgba(0, 0, 0, 0.4);
-    --box-shadow: 0 2rem 3rem var(--color-light);
+  --dark-red: #ff7782;
+  --color-background: #181a1e;
+  --color-white: #202528;
+  --color-dark: #edeffd;
+  --color-dark-variant: #a3bdcc;
+  --color-light: rgba(0, 0, 0, 0.4);
+  --box-shadow: 0 2rem 3rem var(--color-light);
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    outline: 0;
-    appearance: none;
-    border: 0;
-    text-decoration: none;
-    list-style: none;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  appearance: none;
+  border: 0;
+  text-decoration: none;
+  list-style: none;
+  box-sizing: border-box;
 }
 
 html {
-    font-size: 14px;
+  font-size: 14px;
 }
 
 body {
-    width: 100vw;
-    height: 100vh;
-    font-family: poppins, sans-serif;
-    font-size: 0.88rem;
-    background: var(--color-background);
-    user-select: none;
-    overflow-x: hidden;
-    color: var(--color-dark);
+  width: 100vw;
+  height: 100vh;
+  font-family: poppins, sans-serif;
+  font-size: 0.88rem;
+  background: var(--color-background);
+  user-select: none;
+  overflow-x: hidden;
+  color: var(--color-dark);
 }
 
 .container {
-    display: grid;
-    width: 96%;
-    margin: 0 auto;
-    gap: 1.8rem;
-    grid-template-columns: 14rem auto 23rem;
-    position: relative;
+  display: grid;
+  width: 96%;
+  margin: 0 auto;
+  gap: 1.8rem;
+  grid-template-columns: 14rem auto 23rem;
+  position: relative;
 }
 
 a {
-    color: var(--color-dark);
+  color: var(--color-dark);
 }
 
 img {
-    display: block;
-    width: 100%;
+  display: block;
+  width: 100%;
 }
 
 h1 {
-    font-weight: 800;
-    font-size: 1.8rem;
+  font-weight: 800;
+  font-size: 1.8rem;
 }
 
 h2 {
-    font-size: 1.4rem;
+  font-size: 1.4rem;
 }
 
 h3 {
-    font-size: 0.87rem;
+  font-size: 0.87rem;
 }
 
 h4 {
-    font-size: 0.8rem;
+  font-size: 0.8rem;
 }
 
 h5 {
-    font-size: 0.77rem;
+  font-size: 0.77rem;
 }
 
 small {
-    font-size: 0.75rem;
+  font-size: 0.75rem;
+}
+
+.darkred {
+    color: darkred;
+}
+
+.pink {
+    color: pink;
 }
 
 .profile-photo {
-    width: 2.8rem;
-    height: 2.8rem;
-    border-radius: 50%;
-    overflow: hidden;
+  width: 2.8rem;
+  height: 2.8rem;
+  border-radius: 50%;
+  overflow: hidden;
 }
 
 .text-muted {
-    color: var(--color-info-dark);
+  color: var(--color-info-dark);
 }
 
 p {
-    color: var(--color-dark-variant);
+  color: var(--color-dark-variant);
 }
 
 b {
-    color: var(--color-dark);
+  color: var(--color-dark);
 }
 
 .primary {
-    color: var(--color-primary);
+  color: var(--color-primary);
 }
 
 .danger {
-    color: var(--color-danger);
+  color: var(--color-danger);
 }
 
 .success {
-    color: var(--color-success);
+  color: var(--color-success);
 }
 
 .warning {
-    color: var(--color-warning);
+  color: var(--color-warning);
 }
 
 aside {
-    
-    background: var(--color-background);
-    position: fixed;
-    width: 5cm;
+  background: var(--color-background);
+  position: fixed;
+  width: 5cm;
 }
 
 aside .top {
-    background: var(--color-background);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 1.4rem;
+  background: var(--color-background);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 1.4rem;
 }
 
 aside .logo {
-    display: flex;
-    gap: 0.2rem;
+  display: flex;
+  gap: 0.2rem;
 }
 
 aside .logo img {
-    width: 2rem;
-    height: 2rem;
+  width: 2rem;
+  height: 2rem;
 }
 
 aside .close {
-    display: none;
+  display: none;
 }
 
 aside .sidebar {
-    
-    display: flex;
-    flex-direction: column;
-    height: 86vh;
-    position: relative;
-    top: 3rem;
+  display: flex;
+  flex-direction: column;
+  height: 86vh;
+  position: relative;
+  top: 3rem;
 }
 
 aside h3 {
-    font-weight: 500;
+  font-weight: 500;
 }
 
 aside .sidebar a {
-    display: flex;
-    color: var(--color-info-dark);
-    margin-left: 2rem;
-    gap: 1rem;
-    align-items: center;
-    position: relative;
-    height: 3.7rem;
-    transition: all 300ms ease;
+  display: flex;
+  color: var(--color-info-dark);
+  margin-left: 2rem;
+  gap: 1rem;
+  align-items: center;
+  position: relative;
+  height: 3.7rem;
+  transition: all 300ms ease;
 }
 
 aside .sidebar a span {
-    font-size: 1.6rem;
-    transition: all 300ms ease;
+  font-size: 1.6rem;
+  transition: all 300ms ease;
 }
 
 aside .sidebar a:last-child {
-    position: absolute;
-    bottom: 2rem;
-    width: 100%;
+  position: absolute;
+  bottom: 2rem;
+  width: 100%;
 }
 
 aside .sidebar a.active {
-    background: var(--color-light);
-    color: var(--color-primary);
-    margin-left: 0;
-} 
+  background: var(--color-light);
+  color: var(--color-primary);
+  margin-left: 0;
+}
 
 aside .sidebar a.active::before {
-    content: "";
-    width: 6px;
-    height: 100%;
-    background: var(--color-primary);
+  content: "";
+  width: 6px;
+  height: 100%;
+  background: var(--color-primary);
 }
 
 aside .sidebar a.active span {
-    color: var(--color-primary);
-    margin-left: calc(1rem - 3px);
+  color: var(--color-primary);
+  margin-left: calc(1rem - 3px);
 }
 
 aside .sidebar a:hover {
-    color: var(--color-primary);
+  color: var(--color-primary);
 }
 
 aside .sidebar a:hover span {
-    margin-left: 1rem;
+  margin-left: 1rem;
 }
 
 aside .sidebar .notifications-count {
-    background: var(--color-danger);
-    color: var(--color-white);
-    padding: 2px 10px;
-    font-size: 11px;
-    border-radius: var(--border-radius-1);
+  background: var(--color-danger);
+  color: var(--color-white);
+  padding: 2px 10px;
+  font-size: 11px;
+  border-radius: var(--border-radius-1);
 }
 
 main {
-    margin-top: 1.4rem;
-    margin-bottom: 1.4rem;
-    margin-left: 5.5cm;
-    width: 60vw;
+  margin-top: 1.4rem;
+  margin-bottom: 1.4rem;
+  margin-left: 5.5cm;
+  width: 60vw;
+}
+
+/* ======================= Cards ====================== */
+main .subHead {
+  margin-top: 2rem;
+}
+
+.cardBox {
+  position: relative;
+  width: 100%;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+}
+
+.category {
+  position: relative;
+  width: 100%;
+  padding: 20px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 20px;
+}
+
+.cardBox .card {
+  position: relative;
+  background: var(--color-info-dark);
+  padding: var(--card-padding);
+  border-radius: var(--card-border-radius);
+  display: flex;
+  justify-content: space-between;
+  cursor: pointer;
+  box-shadow: var(--box-shadow);
+}
+
+.category .animal {
+  position: relative;
+  background: pink;
+  padding: var(--card-padding);
+  border-radius: var(--card-border-radius);
+  display: flex;
+  justify-content: space-between;
+  cursor: pointer;
+  box-shadow: var(--box-shadow);
+}
+
+.cardBox .card .numbers {
+  position: relative;
+  font-weight: 500;
+  font-size: 2rem;
+}
+
+.category .animal .cowid {
+  color: black;
+  position: relative;
+  font-weight: 500;
+  font-size: 2rem;
+}
+
+.cardBox .card .cardName {
+  color: white;
+  font-size: 1rem;
+  margin-top: 5px;
+}
+
+.category .animal .startdate {
+  color: black;
+  font-size: 1rem;
+  margin-top: 5px;
+}
+
+
+.cardBox .card .iconBx img {
+    width: 4.5rem;
+    height: 4.5rem;
+}
+
+.category .animal .iconBx img {
+  width: 5rem;
+  height: 5rem;
+}
+
+.cardBox .card:hover {
+  background: var(--color-primary);
+}
+
+/* ======================= End of Cards ====================== */
+
+main .animalTable {
+  margin-top: 2rem;
+}
+
+main .animalTable h2 {
+  color: var(--color-primary);
+  width: 90%;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+main .animalTable table {
+  background: var(--color-white);
+  width: 90%;
+  border-radius: var(--card-border-radius);
+  padding: var(--card-padding);
+  text-align: center;
+  box-shadow: var(--box-shadow);
+  transition: all 300ms ease;
+}
+
+main .animalTable table:hover {
+  box-shadow: none;
+}
+
+main table tbody td {
+  height: 2.8rem;
+  border-bottom: 1px solid var(--color-light);
+  color: var(--color-dark-variant);
+}
+
+main table tbody tr:last-child td {
+  border: none;
+}
+
+main table tbody tr {
+  cursor: pointer;
+}
+
+main table tbody tr:hover {
+  transform: scale(1.02);
 }
 
 main form {
-    margin-top: 2rem;
-    margin-left: 2rem;
+  margin-top: 2rem;
+  margin-left: 2rem;
 }
 
 main form header {
-    color: var(--color-primary);
-    font-weight: 500;
-    font-size: 1.5rem;
+  color: var(--color-primary);
+  font-weight: 500;
+  font-size: 1.5rem;
 }
 
-
 main form .item {
-    display: flex;
-    align-items: center;
-    margin: 2rem;
+  display: flex;
+  align-items: center;
+  margin: 2rem;
 }
 
 main form .item label {
-    width: 4cm;
-    font-size: 1.1rem;
-    color: var(--color-dark);
-    font-weight: 500;
-    
+  width: 4cm;
+  font-size: 1.1rem;
+  color: var(--color-dark);
+  font-weight: 500;
 }
 
 main form .item .star {
-    color: var(--dark-red);
+  color: var(--dark-red);
 }
 
-
 main form .item input {
-    display: block;
-    width: 50%;
-    height: 2rem;
-    font-size: 1rem;
-    font-weight: 400;
-    color: var(--color-dark);
-    background: var(--color-background);
-    text-indent: 20px;
-    margin-left: 0.5rem;
-    outline: 2px solid var(--color-dark);
-    border-radius: var(--border-radius-1);
+  display: block;
+  width: 50%;
+  height: 2rem;
+  font-size: 1rem;
+  font-weight: 400;
+  color: var(--color-dark);
+  background: var(--color-background);
+  text-indent: 20px;
+  margin-left: 0.5rem;
+  outline: 2px solid var(--color-dark);
+  border-radius: var(--border-radius-1);
 }
 
 main form .item input[type="date"] {
-    text-indent: 10px;
+  text-indent: 10px;
 }
 
 main form .item select {
-    width: 50%;
-    height: 2rem;
-    font-size: 1rem;
-    font-weight: 400;
-    color: var(--color-dark);
-    background: var(--color-background);
-    text-indent: 20px;
-    margin-left: 0.5rem;
-    outline: 2px solid var(--color-dark);
-    border-radius: var(--border-radius-1);
+  width: 50%;
+  height: 2rem;
+  font-size: 1rem;
+  font-weight: 400;
+  color: var(--color-dark);
+  background: var(--color-background);
+  text-indent: 20px;
+  margin-left: 0.5rem;
+  outline: 2px solid var(--color-dark);
+  border-radius: var(--border-radius-1);
 }
 
 .button-primary {
-    background: var(--color-primary);
-    color: var(--color-white);
-    width: 3cm;
-    height: 2.3rem;
-    border-radius: var(--border-radius-2);
-    font-weight: 500;
-    font-size: 1.3rem;
-    text-align: center;
-    margin-top: 1rem;
-    margin-left: 55%;
+  background: var(--color-primary);
+  color: var(--color-white);
+  width: 3cm;
+  height: 2.3rem;
+  border-radius: var(--border-radius-2);
+  font-weight: 500;
+  font-size: 1.3rem;
+  text-align: center;
+  margin-top: 1rem;
+  margin-left: 55%;
 }
 
 main form .onlyCow {
-    display: none;
+  display: none;
 }
 
 main form .pregYes {
-    display: none;
+  display: none;
 }
 
 main form .bullid {
-    display: none;
+  display: none;
 }
 
 main form .insDate {
-    display: none;
+  display: none;
 }
 
 .right {
-    margin-top: 1.4rem;
-    margin-right: 1.4rem;
-    right: 0;
-    position: fixed;
+  margin-top: 1.4rem;
+  margin-right: 1.4rem;
+  right: 0;
+  position: fixed;
 }
 
 .right .top {
-    display: flex;
-    justify-content: end;
-    gap: 2rem;
+  display: flex;
+  justify-content: end;
+  gap: 2rem;
 }
 
 .right .top button {
-    display: none;
+  display: none;
 }
 
 .right .theme-toggler {
-    background: var(--color-light);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 1.6rem;
-    width: 4.2rem;
-    cursor: pointer;
-    border-radius: var(--border-radius-1);
-    
+  background: var(--color-light);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 1.6rem;
+  width: 4.2rem;
+  cursor: pointer;
+  border-radius: var(--border-radius-1);
 }
 
 .right .theme-toggler span {
-    font-size: 1.2rem;
-    width: 50%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  font-size: 1.2rem;
+  width: 50%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .right .theme-toggler span.active {
-    background: var(--color-primary);
-    color: white;
-    border-radius: var(--border-radius-1);
+  background: var(--color-primary);
+  color: white;
+  border-radius: var(--border-radius-1);
 }
 
 .right .top .profile {
-    display: flex;
-    gap: 2rem;
-    text-align: right;
+  display: flex;
+  gap: 2rem;
+  text-align: right;
 }
 
 @media screen and (max-width: 1200px) {
+  .container {
+    width: 94%;
+    grid-template-columns: 7rem auto 23rem;
+  }
+
+  aside .logo h2 {
+    display: none;
+  }
+
+  aside .sidebar h3 {
+    display: none;
+  }
+
+  aside .sidebar a {
+    width: 5.6rem;
+  }
+
+  aside .sidebar a:last-child {
+    position: relative;
+    margin-top: 1.8rem;
+  }
+
+  @media screen and (max-width: 768px) {
     .container {
-        width: 94%;
-        grid-template-columns: 7rem auto 23rem;
+      width: 100px;
+    }
+
+    aside {
+      position: fixed;
+      left: -100%;
+      background: var(--color-white);
+      width: 18rem;
+      z-index: 3;
+      box-shadow: 1rem 3rem 4rem var(--color-light);
+      height: 100vh;
+      padding-right: var(--card-padding);
+      display: none;
+      animation: showMenu 400ms ease forwards;
+    }
+
+    @keyframes showMenu {
+      to {
+        left: 0;
+      }
+    }
+
+    aside .top {
+      background: var(--color-white);
+    }
+
+    aside .logo {
+      margin-left: 1rem;
     }
 
     aside .logo h2 {
-        display: none;
+      display: inline;
     }
 
     aside .sidebar h3 {
-        display: none;
+      display: inline;
     }
 
     aside .sidebar a {
-        width: 5.6rem;
+      width: 100%;
+      height: 3.4rem;
     }
 
-    aside .sidebar a:last-child{
-        position: relative;
-        margin-top: 1.8rem;
+    aside .sidebar a:last-child {
+      position: absolute;
+      bottom: 5rem;
     }
 
-    @media screen and (max-width: 768px) {
-        .container {
-            width: 100px;
-        }
-
-        aside {
-            position: fixed;
-            left: -100%;
-            background: var(--color-white);
-            width: 18rem;
-            z-index: 3;
-            box-shadow: 1rem 3rem 4rem var(--color-light);
-            height: 100vh;
-            padding-right: var(--card-padding);
-            display: none;
-            animation: showMenu 400ms ease forwards;
-        }
-
-        @keyframes showMenu {
-            to{
-                left: 0;
-            }
-        }
-
-        aside .top {
-            background: var(--color-white);
-        }
-
-        aside .logo {
-            margin-left: 1rem;
-        }
-
-        aside .logo h2{
-            display: inline;
-        }
-
-        aside .sidebar h3 {
-            display: inline;
-        }
-
-        aside .sidebar a {
-            width: 100%;
-            height: 3.4rem;
-        }
-
-        aside .sidebar a:last-child {
-            position: absolute;
-            bottom: 5rem;
-        }
-
-        aside .close {
-            display: inline-block;
-            cursor: pointer;
-        }
-
-        .right {
-            width: 94%;
-            margin: 0 auto 4rem;
-
-        }
-
-        .right .top {
-            position: fixed;
-            top: 0;
-            left: 0;
-            align-items: center;
-            padding: 0 0.8rem;
-            height: 4.6rem;
-            background: var(--color-white);
-            width: 100%;
-            margin: 0;
-            z-index: 2;
-            box-shadow: 0 1rem 1rem var(--color-light);
-        }
-
-        .right .top .theme-toggler {
-            width: 4.4rem;
-            position: absolute;
-            left: 66%;
-        }
-
-        .right .profile .info {
-            display: none;
-
-        }
-
-        .right .top button {
-            display: inline-block;
-            background: transparent;
-            cursor: pointer;
-            color: var(--color-dark);
-            position: absolute;
-            left: 1rem;
-        }
-
-        .right .top .button span {
-            font-size: 2rem;
-        }
+    aside .close {
+      display: inline-block;
+      cursor: pointer;
     }
+
+    .right {
+      width: 94%;
+      margin: 0 auto 4rem;
+    }
+
+    .right .top {
+      position: fixed;
+      top: 0;
+      left: 0;
+      align-items: center;
+      padding: 0 0.8rem;
+      height: 4.6rem;
+      background: var(--color-white);
+      width: 100%;
+      margin: 0;
+      z-index: 2;
+      box-shadow: 0 1rem 1rem var(--color-light);
+    }
+
+    .right .top .theme-toggler {
+      width: 4.4rem;
+      position: absolute;
+      left: 66%;
+    }
+
+    .right .profile .info {
+      display: none;
+    }
+
+    .right .top button {
+      display: inline-block;
+      background: transparent;
+      cursor: pointer;
+      color: var(--color-dark);
+      position: absolute;
+      left: 1rem;
+    }
+
+    .right .top .button span {
+      font-size: 2rem;
+    }
+  }
 }
-
