--- a/components/style.css
+++ b/components/style.css
@@ -148,6 +148,18 @@ b {
   color: var(--color-warning);
 }
 
+.pregnant {
+  background: pink;
+}
+
+.mother {
+  background: var(--color-success);
+}
+
+.abortion {
+  background: var(--color-warning);
+}
+
 aside {
   background: var(--color-background);
   position: fixed;
@@ -251,9 +263,58 @@ main {
   width: 60vw;
 }
 
+main #profileForm {
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 20px;
+  background: var(--color-white);
+  width: 90%;
+  border-radius: var(--card-border-radius);
+  padding: var(--card-padding);
+  box-shadow: var(--box-shadow);
+  transition: all 300ms ease;
+}
+
+main #profileForm:hover {
+  box-shadow: none;
+}
+
+main #profileForm label {
+  width: 2.5cm;
+  font-weight: 500;
+  font-size: 1rem;
+}
+
+main #profileForm .formitem {
+    display: flex;
+    justify-content: start;
+
+}
+
+main #profileForm input[type="submit"]
+{
+  background: var(--color-primary);
+  width: 3cm;
+  cursor: pointer;
+}
+
+
+main #profileForm input, select {
+  width: 4.5cm;
+  font-size: 1rem;
+  outline: 2px solid var(--color-dark);
+  margin-left: 0.5rem;
+  text-indent: 0.5rem;
+  border-radius: var(--border-radius-1);
+  background: var(--color-background);
+  color: var(--color-dark);
+}
+
 /* ======================= Cards ====================== */
 main .subHead {
   margin-top: 2rem;
+  margin-left: 1rem;
 }
 
 .cardBox {
@@ -270,8 +331,9 @@ main .subHead {
   width: 100%;
   padding: 20px;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   grid-gap: 20px;
+  margin-left: 1rem;
 }
 
 .cardBox .card {
@@ -287,13 +349,16 @@ main .subHead {
 
 .category .animal {
   position: relative;
-  background: pink;
   padding: var(--card-padding);
   border-radius: var(--card-border-radius);
   display: flex;
   justify-content: space-between;
   cursor: pointer;
   box-shadow: var(--box-shadow);
+}
+
+.category .animal:hover {
+  background: var(--color-primary);
 }
 
 .cardBox .card .numbers {
@@ -306,7 +371,7 @@ main .subHead {
   color: black;
   position: relative;
   font-weight: 500;
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
 .cardBox .card .cardName {
@@ -318,7 +383,7 @@ main .subHead {
 .category .animal .startdate {
   color: black;
   font-size: 1rem;
-  margin-top: 5px;
+  margin-top: 10px;
 }
 
 
@@ -328,8 +393,8 @@ main .subHead {
 }
 
 .category .animal .iconBx img {
-  width: 5rem;
-  height: 5rem;
+  width: 4rem;
+  height: 4rem;
 }
 
 .cardBox .card:hover {
@@ -516,6 +581,27 @@ main form .insDate {
   display: flex;
   gap: 2rem;
   text-align: right;
+}
+
+.right .add-milk {
+  margin-top: 3rem;
+  background: transparent;
+  border: 2px dashed var(--color-primary);
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  margin-bottom: 0.7rem;
+  justify-content: center;
+  height: 4rem;
+  border-radius: var(--border-radius-3);
+  box-shadow: var(--box-shadow);
+  padding: 1.4rem var(--card-padding);
+  cursor: pointer;
+  
+}
+
+.right .add-milk:hover {
+  box-shadow: none;
 }
 
 @media screen and (max-width: 1200px) {
