--- a/components/style2.css
+++ b/components/style2.css
@@ -85,7 +85,7 @@ main .smallcardbox {
 }
 
 main .smallcardbox .smallcard {
-  background: #202528;
+  background: #FFB74D;
   height: 6rem;
   border-radius: var(--border-radius-1);
   box-shadow: var(--box-shadow);
@@ -100,10 +100,111 @@ main .smallcardbox .smallcard .milkqnt {
 }
 
 main .smallcardbox .smallcard .text {
-  font-size: white;
+  font-size: 1rem;
+  font-weight: 500;
+  color: white;
+  margin-left: 0.7rem;
+}
+
+main .chart-container {
+  margin: 20px;
+  width: 50%;
+  text-align: center;
+}
+
+
+main .topBar {
+  display: grid;
+  grid-template-columns: 6cm 10cm;
+  align-items: center;
+  margin-bottom: 1.5rem;
+}
+
+main .topBar .pageTitle {
+  font-size: 1.8rem;
   font-weight: 500;
   color: var(--color-dark);
-  margin-left: 0.7rem;
+  margin-left: 0.8cm;
+}
+
+main .topBar .search {
+  display: flex;
+  gap: 10px;
+}
+
+main .topBar .search input {
+  width: 10cm;
+  height: 2rem;
+  font-size: 1rem;
+  font-weight: 400;
+  color: var(--color-dark);
+  background: var(--color-background);
+  text-indent: 10px;
+  outline: 2px solid var(--color-primary);
+  border-radius: var(--border-radius-3);
+}
+
+main .topBar .search button {
+  cursor: pointer;
+  width: 3cm;
+  height: 2rem;
+  color: var(--color-white);
+  background: var(--color-dark);
+  border-radius: var(--border-radius-1);
+}
+
+.right .addDailyExpense {
+  background: #D7CCC8;
+  display: grid;
+  grid-template-rows: auto auto auto;
+  align-items: center;
+  margin-top: 2rem;
+  margin-right: 1rem;
+  border-radius: var(--border-radius-3);
+  box-shadow: var(--box-shadow);
+  padding: 1.4rem var(--card-padding);
+  width: 6cm;
+  height: 4cm;
+  gap: 1rem;
+
+}
+
+.right .addDailyExpense:hover {
+  box-shadow: none;
+}
+
+.right .addDailyExpense h3 {
+  color: black;
+}
+
+.right .addDailyExpense input {
+  color: black;
+  outline: 2px solid #363949;
+  border-radius: var(--border-radius-1);
+  background: none;
+}
+
+.right .addDailyExpense input[type="date"]
+{
+  text-indent: 5px;
+  width: 3cm;
+}
+
+.right .addDailyExpense input[type="number"]
+{
+  text-indent: 10px;
+  width: 3cm;
+  height: 2rem;
+}
+
+.right .addDailyExpense button {
+  cursor: pointer;
+  width: 1.5cm;
+  height: 2rem;
+  color: white;
+  background: #363949;
+  border-radius: var(--border-radius-1);
+  margin-left: 0.2rem;
 }
 
 main #addmilkform table tbody input[type="number"]::-webkit-inner-spin-button,
