--- a/components/style.css
+++ b/components/style.css
@@ -260,7 +260,7 @@ main {
   margin-top: 1.4rem;
   margin-bottom: 1.4rem;
   margin-left: 5.5cm;
-  width: 60vw;
+  width: 58vw;
 }
 
 main #profileForm {
@@ -544,7 +544,7 @@ main form .insDate {
 .right .top {
   display: flex;
   justify-content: end;
-  gap: 2rem;
+  gap: 1.3rem;
 }
 
 .right .top button {
@@ -579,7 +579,7 @@ main form .insDate {
 
 .right .top .profile {
   display: flex;
-  gap: 2rem;
+  gap: 1.3rem;
   text-align: right;
 }
 
@@ -592,9 +592,9 @@ main form .insDate {
   padding: 1.4rem var(--card-padding);
   cursor: pointer;
   width: 6cm;
+  height: 4rem;
   margin-left: 4cm;
-  display: grid;
-  grid-template-columns: auto auto;
+  display: flex;
   justify-content: center;
   align-items: center;
 }
