--- a/components/style2.css
+++ b/components/style2.css
@@ -205,7 +205,7 @@ main .topBar .search button {
 .right .addDailyExpense {
   background: #D7CCC8;
   display: grid;
-  grid-template-rows: auto auto auto;
+  grid-template-rows: auto auto auto auto;
   align-items: center;
   margin-top: 2rem;
   margin-right: 1rem;
@@ -213,7 +213,7 @@ main .topBar .search button {
   box-shadow: var(--box-shadow);
   padding: 1.4rem var(--card-padding);
   width: 6cm;
-  height: 4cm;
+  height: 5cm;
   gap: 1rem;
   margin-left: 4cm;
 }
