--- a/components/style.css
+++ b/components/style.css
@@ -269,17 +269,9 @@ main #profileForm {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 20px;
-  background: var(--color-white);
-  width: 90%;
-  border-radius: var(--card-border-radius);
-  padding: var(--card-padding);
-  box-shadow: var(--box-shadow);
-  transition: all 300ms ease;
+  width: 100%;
 }
 
-main #profileForm:hover {
-  box-shadow: none;
-}
 
 main #profileForm label {
   width: 2.5cm;
@@ -416,18 +408,15 @@ main .animalTable h2 {
 }
 
 main .animalTable table {
-  background: var(--color-white);
-  width: 90%;
-  border-radius: var(--card-border-radius);
-  padding: var(--card-padding);
+  width: 100%;
   text-align: center;
-  box-shadow: var(--box-shadow);
-  transition: all 300ms ease;
 }
 
-main .animalTable table:hover {
-  box-shadow: none;
+main .animalTable table thead {
+  background: var(--color-dark);
+  color: var(--color-white);
 }
+
 
 main table tbody td {
   height: 2.8rem;
