--- a/components/style2.css
+++ b/components/style2.css
@@ -285,3 +285,8 @@ input[type="number"]::-webkit-outer-spin-button {
     margin: 0;
 }
 
+main form .headinside {
+  font-size: 1.2rem;
+  font-weight: 400;
+  color: var(--color-primary);
+}
