--- a/components/style.css
+++ b/components/style.css
@@ -269,9 +269,17 @@ main #profileForm {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 20px;
-  width: 100%;
+  background: #EDE7F6;
+  width: 90%;
+  border-radius: var(--card-border-radius);
+  padding: var(--card-padding);
+  box-shadow: var(--box-shadow);
+  transition: all 300ms ease;
 }
 
+main #profileForm:hover {
+  box-shadow: none;
+}
 
 main #profileForm label {
   width: 2.5cm;
