--- a/components/style2.css
+++ b/components/style2.css
@@ -548,3 +548,37 @@ main .duration {
   margin-top: 2rem;
   margin-bottom: -2rem;
 }
+
+main .updatemsg {
+  font-size: 1rem;
+  font-weight: 500;
+  font-style: italic;
+  color: var(--color-primary-variant);
+  margin-left: 2rem;
+}
+
+#notificationContainer {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  max-width: 300px;
+  padding: 10px;
+  background-color: #ffffff;
+  border: 1px solid #cccccc;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  z-index: 9999;
+  display: none;
+}
+
+notification {
+  transition: opacity 0.3s ease;
+}
+
+.notification.show {
+  opacity: 1;
+}
+
+.notification.hide {
+  opacity: 0;
+}
