--- a/components/style2.css
+++ b/components/style2.css
@@ -24,7 +24,7 @@
   --box-shadow: 0 2rem 3rem var(var(--color-light));
 }
 
-main #addmilkform #addmilktable {
+main .woo form table {
   margin-top: 2rem;
   background: var(--color-white);
   width: 90%;
@@ -35,34 +35,35 @@ main #addmilkform #addmilktable {
   transition: all 300ms ease;
 }
 
-main #addmilkform #addmilktable:hover {
+main .woo form table:hover {
   box-shadow: none;
 }
 
-main #addmilkform table tbody tr:hover {
+main .woo form table tbody tr:hover {
   transform: none;
 }
 
-main #addmilkform #addmilktable tbody td {
+main .woo form table tbody td {
   height: 2.8rem;
   border-bottom: 1px solid var(--color-light);
   color: var(--color-dark-variant);
 }
 
-main #addmilkform table tbody input {
+main .woo form table tbody input {
   background: var(--color-white);
   color: var(--color-dark);
+  outline: none;
 }
 
-main #addmilkform .header {
+main .woo form .header {
   width: 100%;
   display: grid;
   grid-template-columns: auto auto;
   gap: 1rem 0;
+  background: #111e88;
 }
 
-main #addmilkform input[type="date"] {
-  background: var(--color-white);
+main .woo form input[type="date"] {
   color: var(--color-dark);
   text-indent: 10px;
   width: 4cm;
@@ -76,7 +77,7 @@ main #addmilkform input[type="date"] {
   border-radius: var(--border-radius-1);
 }
 
-main #addmilkform .price {
+main .woo form .price {
   background: var(--color-white);
   color: var(--color-dark);
   text-indent: 10px;
@@ -90,7 +91,7 @@ main #addmilkform .price {
   border-radius: var(--border-radius-1);
 }
 
-main #addmilkform .expense {
+main .woo form .expense {
   background: var(--color-white);
   color: var(--color-dark);
   text-indent: 10px;
@@ -104,7 +105,7 @@ main #addmilkform .expense {
   border-radius: var(--border-radius-1);
 }
 
-main #addmilkform label {
+main .woo form label {
   font-size: 1.1rem;
   color: var(--color-dark);
   font-weight: 500;
